--- a/portfolio.html
+++ b/portfolio.html
@@ -4,29 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header class="page-header"></header>
     <!--header navigation-->
     <nav>
-      <a href="">webstudio</a>
-      <ul>
+      <a class="logo" href=" https://freebo12.github.io/goit-markup-hw-01/" 
+        ><img
+          src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
+          alt="webstudio_logo"
+          width="145"
+          height="35"
+      /></a>
+      <ul class="nav">
         <li><a href="http://127.0.0.1:5500/index.html">Студія</a></li>
         <li><a href="http://127.0.0.1:5500/portfolio.html">Портфоліо</a></li>
         <li><a href="">Контакти</a></li>
       </ul>
     </nav>
     <!--adress header-->
-    <ul>
+    <ul class="head-adress">
       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     <main></main>
     <!---section-button-nav-main-->
-    <section>
+    <section class="button-sec">
       <h1>Навігація</h1>
-      <ul>
+      <ul class="button-list">
         <li><button type="button">Усі</button></li>
         <li><button type="button">Веб-сайти</button></li>
         <li><button type="button">Додатки</button></li>
@@ -38,7 +45,7 @@
     <section>
       <h2>Головний контент</h2>
       <ul>
-        <li>
+        <li class="images-list">
           <img
             src="./images/portfolio/main/section-images/img-1.jpg"
             alt="Технокряк"
@@ -131,10 +138,16 @@
         </li>
       </ul>
     </section>
-    <footer>
+    <footer class="footer">
       <!--logo-adress-->
-      <a href="">webstudio</a>
-      <address>
+      <a href=" https://freebo12.github.io/goit-markup-hw-01/" class="logo"
+        ><img
+          src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
+          alt="webstudio_logo"
+          width="145"
+          height="35"
+      /></a>
+      <address class="footer-adress">
         <ul>
           <li>
             <a
