--- a/index.html
+++ b/index.html
@@ -5,102 +5,166 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
-    <header>
+  <body class="body">
+    <header class="header">
       <!--header-->
-      <nav>
-        <a href="">webstudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+      <nav class="nav">
+        <a class="logo" href=" https://freebo12.github.io/goit-markup-hw-01/"
+          ><img
+            src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
+            alt="webstudio_logo"
+            width="145"
+            height="35"
+        /></a>
+        <ul class="list-header">
+          <li class="item-header"><a href="">Студія</a></li>
+          <li class="item-header"><a href="">Портфоліо</a></li>
+          <li class="item-header"><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="nav-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--section 1-->
 
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-tittle">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-button" type="button">Замовити послугу</button>
       </section>
       <!--list 4x-->
-      <section>
+      <section class="main">
         <!--h2 our advantages-->
-        <h2>Наші переваги</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <h2 class="main-tittle">Наші переваги</h2>
+        <ul class="main-list">
+          <li class="main-item">
+            <h3 class="main-sub">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="main-article">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
+          </li>
+          <li class="main-item">
+            <h3 class="main-sub">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="main-article">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="main-sub">ПЛАНУВАННЯ</h3>
+            <p class="main-article">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="main-item">
+            <h3 class="main-sub">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="main-article">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <!--section 2 images 3x-->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img src="./images/main/section2/box1.jpg" alt="what we do" width="370" height="300" />
+      <section class="cont">
+        <h2 class="cont-tittle">Чим ми займаємося</h2>
+        <ul class="cont-list">
+          <li class="cont-item">
+            <img
+              class="cont-img"
+              src="./images/main/section2/box1.jpg"
+              alt="what we do"
+              width="370"
+              height="300"
+            />
           </li>
-          <li>
-            <img src="./images/main/section2/box2.jpg" alt="what we do" width="370" height="300" />
+          <li class="cont-item">
+            <img
+              class="cont-img"
+              src="./images/main/section2/box2.jpg"
+              alt="what we do"
+              width="370"
+              height="300"
+            />
           </li>
-          <li>
-            <img src="./images/main/section2/box3.jpg" alt="what we do" width="370" height="300" />
+          <li class="cont-item">
+            <img
+              class="cont-img"
+              src="./images/main/section2/box3.jpg"
+              alt="what we do"
+              width="370"
+              height="300"
+            />
           </li>
         </ul>
       </section>
       <!---our team section 3-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/main/section3/foto1.jpg" alt="what-we-do" width="270" height="260" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+      <section class="team">
+        <h2 class="team-tittle">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/main/section3/foto1.jpg"
+              alt="what-we-do"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-sub">Ігор Дем'яненко</h3>
+            <p class="team-article">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/main/section3/foto2.jpg" alt="what-we-do" width="270" height="260" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/main/section3/foto2.jpg"
+              alt="what-we-do"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-sub">Ольга Рєпіна</h3>
+            <p class="team-article">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/main/section3/foto3.jpg" alt="what-we-do" width="270" height="260" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/main/section3/foto3.jpg"
+              alt="what-we-do"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-sub">Микола Тарасов</h3>
+            <p class="team-article">Marketing</p>
           </li>
-          <li>
-            <img src="./images/main/section3/foto4.jpg" alt="what-we-do" width="270" height="260" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/main/section3/foto4.jpg"
+              alt="what-we-do"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-sub">Михайло Єрмаков</h3>
+            <p class="team-article">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">webstudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="logo" href=" https://freebo12.github.io/goit-markup-hw-01/"
+        ><img
+          src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
+          alt="webstudio_logo"
+          width="145"
+          height="35"
+      /></a>
+      <address class="adress">
+        <ul class="adress-list">
+          <li class="adress-item">
             <a
+              class="adress-link"
               href="https://goo.gl/maps/4gL3Jrbb5bLPBRH38"
               target="_blank"
               rel="noopener noreferer nofollow"
@@ -108,10 +172,10 @@
             >
           </li>
 
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="adress-item">
+            <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="adress-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
