header adress +button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
+    <style>
+      body {font-family: roboto;Raleway;}
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -12,7 +21,7 @@
     <header class="header">
       <!--header-->
       <nav class="nav">
-        <a class="logo" href=" https://freebo12.github.io/goit-markup-hw-01/"
+        <a href="http://127.0.0.1:5500/index.html"
           ><img
             src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
             alt="webstudio_logo"
@@ -20,14 +29,18 @@
             height="35"
         /></a>
         <ul class="list-header">
-          <li class="item-header"><a href="">Студія</a></li>
-          <li class="item-header"><a href="">Портфоліо</a></li>
-          <li class="item-header"><a href="">Контакти</a></li>
+          <li class="item-header-main">
+            <a class="link-header" href="/index.html">Студія</a>
+          </li>
+          <li class="item-header"><a class="link-header" href="">Портфоліо</a></li>
+          <li class="item-header"><a class="link-header" href="">Контакти</a></li>
         </ul>
       </nav>
       <ul class="nav-list">
-        <li class="nav-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="nav-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--section 1-->
@@ -153,7 +166,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href=" https://freebo12.github.io/goit-markup-hw-01/"
+      <a href="http://127.0.0.1:5500/index.html"
         ><img
           src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
           alt="webstudio_logo"
