--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
     <style>
-      body {font-family: roboto;Raleway;}
+      body {font-family: 'roboto', 'Raleway';}
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -168,7 +168,7 @@
     <footer class="footer">
       <a href="http://127.0.0.1:5500/index.html"
         ><img
-          src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
+          src="images/header/footer.svg"
           alt="webstudio_logo"
           width="145"
           height="35"
@@ -177,7 +177,7 @@
         <ul class="adress-list">
           <li class="adress-item">
             <a
-              class="adress-link"
+              class="address-map"
               href="https://goo.gl/maps/4gL3Jrbb5bLPBRH38"
               target="_blank"
               rel="noopener noreferer nofollow"
@@ -186,9 +186,9 @@
           </li>
 
           <li class="adress-item">
-            <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="adress-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="address-link"><a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
