--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
     <style>
       body {
         font-family: 'roboto', 'Raleway';
+        background-color: #ffffff;
+        color: #212121;
       }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +23,6 @@
   </head>
   <body>
     <header class="header">
-      <!--header-->
       <nav class="nav">
         <a href="http://127.0.0.1:5500/index.html"
           ><img
@@ -34,7 +35,7 @@
           <li class="item-header-main">
             <a class="link-header" href="/index.html">Студія</a>
           </li>
-          <li class="item-header"><a class="link-header" href="">Портфоліо</a></li>
+          <li class="item-header"><a class="current" href="">Портфоліо</a></li>
           <li class="item-header"><a class="link-header" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -45,115 +46,122 @@
         <li class="nav-item"><a class="nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main></main>
-    <!---section-button-nav-main-->
-    <section class="button-sec">
-      <h1>Навігація</h1>
-      <ul class="button-list">
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-    </section>
-    <!--section-images-nav-->
-    <section>
-      <h2>Головний контент</h2>
-      <ul>
-        <li class="images-list">
-          <img
-            src="./images/portfolio/main/section-images/img-1.jpg"
-            alt="Технокряк"
-            width="370"
-            height="300"
-          />
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-2.jpg"
-            alt="Постер New Orlean vs Golden Star"
-            width="370"
-            height="300"
-          />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-3.jpg"
-            alt="Ресторан Seafood"
-            width="370"
-            height="300"
-          />
-          <h3>Ресторан Seafood</h3>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-4.jpg"
-            alt="Проєкт Prime"
-            width="370"
-            height="300"
-          />
-          <h3>Проєкт Prime</h3>
-          <p>Маркетинг</p>
-          >
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-5.jpg"
-            alt="Проєкт Boxes"
-            width="370"
-            height="300"
-          />
-          <h3>Проєкт Boxes</h3>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-6.jpg"
-            alt="Inspiration has no Borders"
-            width="370"
-            height="300"
-          />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-7.jpg"
-            alt="Видання Limited Edition"
-            width="370"
-            height="300"
-          />
-          <h3>Видання Limited Edition</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-8.jpg"
-            alt="Проєкт LAB"
-            width="370"
-            height="300"
-          />
-          <h3>Проєкт LAB</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/main/section-images/img-9.jpg"
-            alt="Growing Business"
-            width="370"
-            height="300"
-          />
-          <h3>Growing Business</h3>
-          <p>Додаток</p>
-        </li>
-      </ul>
-    </section>
+    <main>
+      <!---section-button-nav-main-->
+      <section class="btn">
+        <h1 class="btn-tittle">Навігація</h1>
+        <ul class="btn-list">
+          <li class="btn-item"><button class="btn-button" type="button">Усі</button></li>
+          <li class="btn-item"><button class="btn-button" type="button">Веб-сайти</button></li>
+          <li class="btn-item"><button class="btn-button" type="button">Додатки</button></li>
+          <li class="btn-item"><button class="btn-button" type="button">Дизайн</button></li>
+          <li class="btn-item"><button class="btn-button" type="button">Маркетинг</button></li>
+        </ul>
+        <h2 class="section-tittle">Головний контент</h2>
+        <!--section img-->>
+        <ul>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-1.jpg"
+              alt="Технокряк"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Технокряк</h3>
+            <p class="section-desc">Веб-сайт</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-2.jpg"
+              alt="Постер New Orlean vs Golden Star"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Постер New Orlean vs Golden Star</h3>
+            <p class="section-desc">Дизайн</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-3.jpg"
+              alt="Ресторан Seafood"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Ресторан Seafood</h3>
+            <p class="section-desc">Додаток</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-4.jpg"
+              alt="Проєкт Prime"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Проєкт Prime</h3>
+            <p class="section-desc">Маркетинг</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-5.jpg"
+              alt="Проєкт Boxes"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Проєкт Boxes</h3>
+            <p class="section-desc">Додаток</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-6.jpg"
+              alt="Inspiration has no Borders"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Inspiration has no Borders</h3>
+            <p class="section-desc">Веб-сайт</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-7.jpg"
+              alt="Видання Limited Edition"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Видання Limited Edition</h3>
+            <p class="section-desc">Дизайн</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-8.jpg"
+              alt="Проєкт LAB"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Проєкт LAB</h3>
+            <p class="section-desc">Маркетинг</p>
+          </li>
+          <li class="section-list">
+            <img
+              class="section-img"
+              src="./images/portfolio/main/section-images/img-9.jpg"
+              alt="Growing Business"
+              width="370"
+              height="300"
+            />
+            <h3 class="section-subject">Growing Business</h3>
+            <p class="section-desc">Додаток</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
       <a href="http://127.0.0.1:5500/index.html"
         ><img src="images/header/footer.svg" alt="webstudio_logo" width="145" height="35"
@@ -170,7 +178,7 @@
             >
           </li>
 
-          <li class="adress-item">
+          <li class="address-item">
             <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="address-link">
