--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
-    <style>
-      body {
-        font-family: 'roboto', 'Raleway';
-        background-color: #ffffff;
-        color: #212121;
-      }
-    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,23 +14,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body class="body">
+  <body>
     <header class="header">
       <!--header-->
       <nav class="nav">
-        <a href="http://127.0.0.1:5500/index.html"
-          ><img
-            src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
-            alt="webstudio_logo"
-            width="145"
-            height="35"
-        /></a>
+        <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span> </a>
         <ul class="list-header">
           <li class="item-header-main">
-            <a class="current" href="/index.html">Студія</a>
+            <a class="current" href="./index.html">Студія</a>
           </li>
           <li class="item-header">
-            <a class="link-header" href="http://127.0.0.1:5500/portfolio.html">Портфоліо</a>
+            <a class="link-header" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="item-header"><a class="link-header" href="">Контакти</a></li>
         </ul>
@@ -172,9 +159,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="http://127.0.0.1:5500/index.html"
-        ><img src="images/header/footer.svg" alt="webstudio_logo" width="145" height="35"
-      /></a>
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-half-footer">Studio</span>
+      </a>
       <address class="adress">
         <ul class="adress-list">
           <li class="adress-item">
