--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <style>
-      body {
-        font-family: 'roboto', 'Raleway';
-        background-color: #ffffff;
-        color: #212121;
-      }
-    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,18 +17,12 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a href="http://127.0.0.1:5500/index.html"
-          ><img
-            src="https://raw.githubusercontent.com/Freebo12/goit-markup-hw-01/e03e0a6c432729918b54d51c32069ed9e02d8b0b/images/header/logo.svg"
-            alt="webstudio_logo"
-            width="145"
-            height="35"
-        /></a>
+        <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span> </a>
         <ul class="list-header">
           <li class="item-header-main">
             <a class="link-header" href="/index.html">Студія</a>
           </li>
-          <li class="item-header"><a class="current" href="">Портфоліо</a></li>
+          <li class="item-header"><a class="current" href="./portfolio.html">Портфоліо</a></li>
           <li class="item-header"><a class="link-header" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -49,7 +36,7 @@
     <main>
       <!---section-button-nav-main-->
       <section class="btn">
-        <h1 class="btn-tittle">Навігація</h1>
+        <h1 class="visually-hidden">Навігація</h1>
         <ul class="btn-list">
           <li class="btn-item"><button class="btn-button" type="button">Усі</button></li>
           <li class="btn-item"><button class="btn-button" type="button">Веб-сайти</button></li>
@@ -57,7 +44,6 @@
           <li class="btn-item"><button class="btn-button" type="button">Дизайн</button></li>
           <li class="btn-item"><button class="btn-button" type="button">Маркетинг</button></li>
         </ul>
-        <h2 class="section-tittle">Головний контент</h2>
         <!--section img-->>
         <ul>
           <li class="section-list">
@@ -68,7 +54,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Технокряк</h3>
+            <h2 class="section-subject">Технокряк</h2>
             <p class="section-desc">Веб-сайт</p>
           </li>
           <li class="section-list">
@@ -79,7 +65,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Постер New Orlean vs Golden Star</h3>
+            <h2 class="section-subject">Постер New Orlean vs Golden Star</h2>
             <p class="section-desc">Дизайн</p>
           </li>
           <li class="section-list">
@@ -90,7 +76,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Ресторан Seafood</h3>
+            <h2 class="section-subject">Ресторан Seafood</h2>
             <p class="section-desc">Додаток</p>
           </li>
           <li class="section-list">
@@ -101,7 +87,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Проєкт Prime</h3>
+            <h2 class="section-subject">Проєкт Prime</h2>
             <p class="section-desc">Маркетинг</p>
           </li>
           <li class="section-list">
@@ -112,7 +98,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Проєкт Boxes</h3>
+            <h2 class="section-subject">Проєкт Boxes</h2>
             <p class="section-desc">Додаток</p>
           </li>
           <li class="section-list">
@@ -123,7 +109,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Inspiration has no Borders</h3>
+            <h2 class="section-subject">Inspiration has no Borders</h2>
             <p class="section-desc">Веб-сайт</p>
           </li>
           <li class="section-list">
@@ -134,7 +120,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Видання Limited Edition</h3>
+            <h2 class="section-subject">Видання Limited Edition</h2>
             <p class="section-desc">Дизайн</p>
           </li>
           <li class="section-list">
@@ -145,7 +131,7 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Проєкт LAB</h3>
+            <h2 class="section-subject">Проєкт LAB</h2>
             <p class="section-desc">Маркетинг</p>
           </li>
           <li class="section-list">
@@ -156,16 +142,16 @@
               width="370"
               height="300"
             />
-            <h3 class="section-subject">Growing Business</h3>
+            <h2 class="section-subject">Growing Business</h2>
             <p class="section-desc">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="http://127.0.0.1:5500/index.html"
-        ><img src="images/header/footer.svg" alt="webstudio_logo" width="145" height="35"
-      /></a>
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-half-footer">Studio</span>
+      </a>
       <address class="adress">
         <ul class="adress-list">
           <li class="adress-item">
