change way studio

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a class="logo" href="./index.html">Web<span class="logo-half">Studio</span> </a>
         <ul class="list-header">
           <li class="item-header-main">
-            <a class="link-header" href="/index.html">Студія</a>
+            <a class="link-header" href="./index.html">Студія</a>
           </li>
           <li class="item-header"><a class="current" href="./portfolio.html">Портфоліо</a></li>
           <li class="item-header"><a class="link-header" href="">Контакти</a></li>
