--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           <li class="btn-item"><button class="btn-button" type="button">Дизайн</button></li>
           <li class="btn-item"><button class="btn-button" type="button">Маркетинг</button></li>
         </ul>
-        <!--section img-->
+        <!--section imgs-->
         <ul>
           <li class="section-list">
             <img
