--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!--list 4x-->
       <section class="main">
         <!--h2 our advantages-->
-        <h2 class="main-tittle">Наші переваги</h2>
+        <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="main-list">
           <li class="main-item">
             <h3 class="main-sub">УВАГА ДО ДЕТАЛЕЙ</h3>
